{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 20,
  "lineage": "7bdb54ae-3f3d-5bb8-0c0b-9b39ab6e4d31",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test_nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a13ec170-1566-422c-a51c-718b88276cd9/resourceGroups/ha-test-rg/providers/Microsoft.Network/networkInterfaces/test_server-nic",
            "ip_configuration": [
              {
                "name": "test_server-ip",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a13ec170-1566-422c-a51c-718b88276cd9/resourceGroups/ha-test-rg/providers/Microsoft.Network/virtualNetworks/ha-test-vnet/subnets/ha-test-subnet"
              }
            ],
            "location": "westus2",
            "name": "test_server-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "ha-test-rg"
          },
          "dependencies": [
            "azurerm_resource_group.test_rg",
            "azurerm_subnet.test_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "test_nsg_association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a13ec170-1566-422c-a51c-718b88276cd9/resourceGroups/ha-test-rg/providers/Microsoft.Network/networkInterfaces/test_server-nic|/subscriptions/a13ec170-1566-422c-a51c-718b88276cd9/resourceGroups/ha-test-rg/providers/Microsoft.Network/networkSecurityGroups/test_server-nsg",
            "network_interface_id": "/subscriptions/a13ec170-1566-422c-a51c-718b88276cd9/resourceGroups/ha-test-rg/providers/Microsoft.Network/networkInterfaces/test_server-nic",
            "network_security_group_id": "/subscriptions/a13ec170-1566-422c-a51c-718b88276cd9/resourceGroups/ha-test-rg/providers/Microsoft.Network/networkSecurityGroups/test_server-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.test_nic",
            "azurerm_network_security_group.test_nsg",
            "azurerm_resource_group.test_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "test_nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a13ec170-1566-422c-a51c-718b88276cd9/resourceGroups/ha-test-rg/providers/Microsoft.Network/networkSecurityGroups/test_server-nsg",
            "location": "westus2",
            "name": "test_server-nsg",
            "resource_group_name": "ha-test-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.test_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test_nsg_rule_rdp",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a13ec170-1566-422c-a51c-718b88276cd9/resourceGroups/ha-test-rg/providers/Microsoft.Network/networkSecurityGroups/test_server-nsg/securityRules/RDP Inbound",
            "name": "RDP Inbound",
            "network_security_group_name": "test_server-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "ha-test-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.test_nsg",
            "azurerm_resource_group.test_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/a13ec170-1566-422c-a51c-718b88276cd9/resourceGroups/ha-test-rg/providers/Microsoft.Network/publicIPAddresses/test_server-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "test_server-public-ip",
            "resource_group_name": "ha-test-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.test_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a13ec170-1566-422c-a51c-718b88276cd9/resourceGroups/ha-test-rg/providers/Microsoft.Network/virtualNetworks/ha-test-vnet/subnets/ha-test-subnet",
            "name": "ha-test-subnet",
            "resource_group_name": "ha-test-rg",
            "virtual_network_name": "ha-test-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.test_rg",
            "azurerm_virtual_network.test_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test_vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "id": "/subscriptions/a13ec170-1566-422c-a51c-718b88276cd9/resourceGroups/ha-test-rg/providers/Microsoft.Network/virtualNetworks/ha-test-vnet",
            "location": "westus2",
            "name": "ha-test-vnet",
            "resource_group_name": "ha-test-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/a13ec170-1566-422c-a51c-718b88276cd9/resourceGroups/ha-test-rg/providers/Microsoft.Network/virtualNetworks/ha-test-vnet/subnets/ha-test-subnet",
                "name": "ha-test-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.test_rg"
          ]
        }
      ]
    }
  ]
}